--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.35.0",
     "web-vitals": "^1.0.1"
