--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^4.1.17",
     "gsap": "^3.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -13,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.35.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
