--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase-tools": "^9.18.0",
     "framer-motion": "^4.1.17",
     "gsap": "^3.7.1",
     "prop-types": "^15.7.2",
