--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run:
-       yarn install
+      - run: | 
+       yarn install 
        yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
